--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "eger-translator-bot",
+  "name": "translator-bot",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Alexander Rubenov",
   "license": "ISC",
   "dependencies": {
-    "node-fetch": "^2.6.1",
+    "node-fetch": "2.6.1",
     "node-telegram-bot-api": "0.50.0"
   }
 }
